--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "tune-sklearn" %}
-{% set version = "0.4.1" %}
+{% set version = "0.4.6" %}
 
 package:
   name: {{ name|lower }}
@@ -9,29 +9,34 @@ source:
   # NOTE: pypi doesnt contain a source package for it. See
   # https://github.com/ray-project/tune-sklearn/issues/159
   url: https://github.com/ray-project/tune-sklearn/archive/v{{ version }}.tar.gz
-  sha256: 8a42e3b4ead768a18a83edb137f00df175abd051fb03b8809b7b66de42d18108
+  sha256: f6d531f99a02de4a420cbefb96de64c8db4a014f2c7352f38a6a7a37e2103614
 
 build:
-  noarch: python
   number: 0
-  script: {{ PYTHON }} -m pip install . -vv
+  skip: true  # [py<38]
+  script: {{ PYTHON }} -m pip install . --no-deps --no-build-isolation -vv
 
 requirements:
   host:
-    - python >=3.6
+    - python
     - pip
     - setuptools
+    - wheel
   run:
-    - python >=3.6
-    - ray-tune >=1.0.1
-    - ray-core >=1.0.1
+    - python
+    - ray-tune >=2.0.0
+    - ray-core >=2.0.0
     - pandas
     - numpy >=1.16
     - scipy
-    - scikit-learn >=0.23
+    - scikit-learn
     - scikit-optimize
 
 test:
+  requires:
+    - pip
+  commands:
+    - pip check
   imports:
     - tune_sklearn
 
@@ -41,7 +46,11 @@ about:
   license_family: Apache
   license_file: LICENSE
   summary: A drop-in replacement for Scikit-Learn’s GridSearchCV / RandomizedSearchCV -- but with cutting edge hyperparameter tuning techniques.
+  description: |
+    A drop-in replacement for Scikit-Learn’s GridSearchCV / RandomizedSearchCV -- but with cutting edge hyperparameter tuning techniques.
+  doc_url: https://github.com/ray-project/tune-sklearn/blob/master/README.md
+  dev_url: https://github.com/ray-project/tune-sklearn
 
 extra:
   recipe-maintainers:
-    - hadim
+
