--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,6 +29,8 @@ requirements:
     - ray-tune >=2.0.0
     - scipy
     - scikit-learn
+    # utils.py requires packaging indirectly from ray-air, see https://github.com/ray-project/tune-sklearn/blob/v0.4.6/tune_sklearn/utils.py#L17C1-L17C61
+    - packaging
 
 test:
   imports:
